# pipelines

./: .env  .gitignore  README.md  main.py  pipeline.py  pyproject.toml  tasks.py
pipelines/: setup.py  tasks.py  template.py
prefect_example/: main.py  norm.csv
psql/: Dockerfile  docker-compose.yml  init.sql
src/: cli.py  setup.py  template.py
src/pipelines/: base.py  pipeline.py  tasks.py
