[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Nikita Rydanov <wrongwayboyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^1.5.3"
pytest = "^7.2.1"
click = "^8.1.3"
sqlalchemy = "^2.0.1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
